Bugfix 5032, 5044 -  Long menu items overlap with the dropdown button on the block/class/style selectors

--- a/Website/Composite/styles/default/labels.less
+++ b/Website/Composite/styles/default/labels.less
@@ -21,6 +21,7 @@ ui|labelbox {
     ui|labeltext {
         display: block;
         max-width: 100%;
+        overflow: hidden;
     }
 
     &.toolbartext {
